--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ name: Publish Python package
 
 on:
   push:
+    tags:
+      - 'v*.*.*'  # triggers on version tags like v0.2.0
     branches:
       - main
 jobs:
